2005-02-26  Poul Andersen  <pba@mailme.dk>
	* Services/MessageService.cs: Added ShowMessage(string message, Gtk.Window parent )
	to ensure modal messagebox as window on top.

2005-02-20  John Luke  <john.luke@gmail.com>

	* Gui/Components/SharpMessageBox.cs
	* Gui/Components/StatusBar/AxStatusBarPanel.cs
	* Gui/Components/StatusBar/AxStatusBar.cs
	* Gui/Components/SideBar
	* Gui/Components/SideBar/AxSideBar.cs
	* Gui/Components/SideBar/AxSideTabItem.cs
	* Gui/Components/SideBar/AxSideTab.cs
	* Gui/Components/SideBar/SharpDevelopSideBar.cs
	* Gui/Components/SideBar/SharpDevelopSideTabItem.cs
	* Commands/SideBarCommands.cs:
	* Gui/Pads/SideBarView.cs:
	* Gui/ErrorDialogs:
	* Gui/ErrorDialogs/LoadingError.cs:
	* Makefile.am: remove unused stuff from SD

2005-02-11  Todd Berman  <tberman@off.net>

	* Services/Project/ProjectService.cs:
	* Internal/Project/Combine/CombineEntry.cs:
	Make sure the filename is valid for the format.

2005-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/Project/ProjectService.cs: Fix default file formats.

2005-02-11  Ben Motmans <ben.motmans@gmail.com>

	* Internal/ProgressMonitoring/BaseProgressMonitor.cs:
	moved cancelRequestedEvent inside MbrWrapper
	* Services/Tasks/TaskService.cs
	* Services/Tasks/OutputProgressMonitor
	* Services/ProcessService/ProcessService.cs
	* Gui/Pads/DefaultMonitorPad.cs:
	Added kill and clear button

2005-02-10  Todd Berman  <tberman@off.net>

	* Internal/Project/Combine/Combine.cs: Don't generate makefiles on
	Save.

2005-02-10  Todd Berman  <tberman@off.net>

	* Services/Project/DefaultProjectService.cs: Moved, see below.
	* Services/Project/ProjectService.cs:
	* Makefile.am:
	* MonoDevelopCore.addin.xml:

	Moved DefaultProjectService to ProjectService.

2005-02-10  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs:
	* Services/Project/DefaultProjectService.cs:
	* Services/IconService.cs:
	* Gui/Dialogs/NewProjectDialog.cs:
	* Makefile.am:
	* Internal/Project/PrjxFileFormat.cs: